# p2play

./: .env  .gitignore  README.md  docker-compose.yml
backend/: config.ini  pyproject.toml
backend/backend/: main.py
backend/backend/adapters/auth/: google.py  token.py
backend/backend/adapters/db/: alembic.ini  database.py
backend/backend/adapters/gateways/: friendship.py  lobby.py  match.py  queue.py  refresh.py  user.py
backend/backend/adapters/messages/: lobby.py  match.py  message.py  user.py
backend/backend/adapters/persistence/: redis_keys.py  settings.py
backend/backend/adapters/pubsub/: pubsub.py
backend/backend/application/auth/: gateway.py
backend/backend/core/: __init__.py  dependencies.py  lobby.py  match.py  router.py  settings.py  websocket.py
backend/backend/db/: database.py
backend/backend/exceptions/: exceptions.py
backend/backend/main/: di.py  web.py
backend/backend/presentation/: __init__.py  router.py  websocket_handler.py
backend/backend/repositories/: base_redis_repository.py  common_schema.py  friend_repository.py  lobby_repository.py  match_repository.py  user_repository.py  websocket_repository.py
backend/backend/schemas/: common_schema.py  game_schema.py  lobby_schema.py  match_schema.py  response_schema.py  user_schema.py
backend/backend/services/: auth_service.py  lobby_service.py  match_service.py  user_service.py  websocket_service.py
backend/backend/utils/: auth.py  auth_dependencies.py  ban_match.py  google.py  match_event_listener.py  redis_keys.py  steam.py
backend/backend/websockets/: lobby_websocket.py
(+102 files in other folders)
