[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["starzkeeper <yaroslav020304@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
python-jose = "^3.3.0"
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
configparser = "^7.1.0"
pydantic-settings = "^2.6.1"
httpx-oauth = "^0.15.1"
bcrypt = "4.0.1"
pydantic = {extras = ["email"], version = "^2.9.2"}
authlib = "^1.3.2"
itsdangerous = "^2.2.0"
websockets = "^14.1"
redis = "^5.2.0"
hypercorn = "^0.17.3"
fastapi = "^0.115.6"
uvicorn = {version = "^0.32.1", extras = ["standard"]}
pymongo = "^4.10.1"
dishka = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
